<resources>
    <string name="app_name" translatable="false">Audiogames Suite</string>
    <string name="play">Play</string>
    <string name="how_to">Info</string>
    <string name="info">Info</string>
    <string name="site">lim.di.unimi.it</string>
    <string name="site_acc">University of Milan. Computer Science Department. Musical Computer Science Lab.</string>
    <string name="new_game">New game</string>
    <string name="lost_game">Back to menu</string>
    <string name="instructions">Instructions</string>
    <string name="instr_ok">OK</string>
    <string name="instr_dont">Don\'t show me again</string>
    <string name="game1" translatable="false">Picker</string>
    <string name="game1_acc">Game 1. Picker</string>
    <string name="game2" translatable="false">Simon</string>
    <string name="game2_acc">Game 2. Simon</string>
    <string name="game3" translatable="false">Worldwide</string>
    <string name="game3_acc">Game 3. Worldwide</string>
    <string name="game4" translatable="false">Mastermind</string>
    <string name="game4_acc">Game 4. Mastermind</string>
    <string name="info_content">Audiogames Suite developed by Matteo Dell\'Oro, Musical Computer Science student at Università degli Studi di Milano, collaborating with LIM (Laboratorio di Informatica Musicale) of the Computer Science Department.</string>
    <string name="info_content2">Strongly recommended to use the app with vertical orientation (portrait).</string>
    <string name="game1_how_content">Picker is a game where the player is presented 2 sounds with different pitches. He has to decide which sound\'s pitch is higher or lower, depending on what the instructions ask. Guessing a sound reduces the difference between the pitches of the next round, while making a mistake ends the game. The sounds can be repeated by pressing the repeat button.</string>
    <string name="game2_how_content">Simon is a memory game where the player has to repeat the combination of sounds played by the computer in the same exact order. It starts from a single sound and adds an additional one every round. Repeating the exact sequence of the round awards 1 point. Doing a mistake ends the game.</string>
    <string name="game3_how_content">Worldwide is a translation game where the player is presented a sentence in English and he has to translate it in a foreign one. Currently there are 2 different languages to choose from (Spanish and Italian). Every sentence has 4 possible translations to choose from and only one is correct. A game lasts 8 rounds with a sentence each. Clicking on the sentence triggers the local pronunciation.</string>
    <string name="game4_how_content">Mastermind is a game where the player has to break the code generated randomly from the computer. A code is a 4 digits number, each digit ranging from 0 to 9. Close the keyboard after inserting the code in order to click the submit button. Making an attempt triggers different hints if the digit is in the code and in the right place (green light in the graphic version), if the digit is in the code but not in that place (yellow light in the graphic version) and if the digit is not in the code at all (red light in the graphic version). A maximum of 9 attempts can be made before the game ends.</string>
    <string name="game1_basic">Click play to start!</string>
    <string name="game1_score">Score</string>
    <string name="game1_initial_score" translatable="false">0</string>
    <string name="game1_left">First sound</string>
    <string name="game1_right">Second sound</string>
    <string name="game1_start">Start</string>
    <string name="game1_repeat">Repeat</string>
    <string name="game1_next">Next round</string>
    <string name="game1_high">Select the higher pitched sound</string>
    <string name="game1_low">Select the lower pitched sound</string>
    <string name="game1_loss">You lost!</string>
    <string name="game1_result">Final score:</string>
    <string name="game1_success">Nice job! Score:</string>
    <string name="game2_basic">Click play to start!</string>
    <string name="game2_score">Score</string>
    <string name="game2_result">Your score:</string>
    <string name="game2_initial_score" translatable="false">0</string>
    <string name="game2_repeat">Repeat the sound sequence</string>
    <string name="game2_next">Next round</string>
    <string name="game2_start">Start</string>
    <string name="game2_dog">Dog</string>
    <string name="game2_cat">Cat</string>
    <string name="game2_horse">Horse</string>
    <string name="game2_cow">Cow</string>
    <string name="game2_loss">You lost!</string>
    <string name="game2_success">Nice job! Score:</string>
    <string name="game3_basic">Click a flag to start!</string>
    <string name="game3_answer">Answer</string>
    <string name="game3_initial_score" translatable="false">0</string>
    <string name="game3_result">Your score:</string>
    <string name="game3_result_good">Congratulations! The answer was correct. Your score:</string>
    <string name="game3_result_bad">Argh! Wrong answer! Your score:</string>
    <string name="game3_please">Please select an option!</string>
    <string name="game3_es">Play in Spanish</string>
    <string name="game3_it">Play in Italian</string>
    <string name="game3_pick_1">Pick first translation</string>
    <string name="game3_pick_2">Pick second translation</string>
    <string name="game3_pick_3">Pick third translation</string>
    <string name="game3_pick_4">Pick fourth translation</string>
    <string name="game3_answer_1">First translation, click to read</string>
    <string name="game3_answer_2">Second translation, click to read</string>
    <string name="game3_answer_3">Third translation, click to read</string>
    <string name="game3_answer_4">Fourth translation, click to read</string>
    <string name="game3_end">Game over!</string>
    <string name="game4_basic">Click play to start!</string>
    <string name="game4_attempts">Attempts left</string>
    <string name="game4_initial_attempts" translatable="false">9</string>
    <string name="game4_insert">Insert the code in the box below</string>
    <string name="game4_submit">Submit</string>
    <string name="game4_win">Congratulations you won!</string>
    <string name="game4_lose">Argh you lost!</string>
    <string name="game4_code_was">The code was: </string>
    <string name="game4_digit">Digit</string>
    <string name="game4_digit1_wrong">Digit 1. Error! The digit is not in the code</string>
    <string name="game4_digit1_almost">Digit 1. Almost! The digit is in the code but in another place. It might be a place already guessed!</string>
    <string name="game4_digit1_ok">Digit 1. OK! The digit is in the right place</string>
    <string name="game4_digit2_wrong">Digit 2. Error! The digit is not in the code</string>
    <string name="game4_digit2_almost">Digit 2. Almost! The digit is in the code but in another place. It might be a place already guessed!</string>
    <string name="game4_digit2_ok">Digit 2. OK! The digit is in the right place</string>
    <string name="game4_digit3_wrong">Digit 3. Error! The digit is not in the code</string>
    <string name="game4_digit3_almost">Digit 3. Almost! The digit is in the code but in another place. It might be a place already guessed!</string>
    <string name="game4_digit3_ok">Digit 3. OK! The digit is in the right place</string>
    <string name="game4_digit4_wrong">Digit 4. Error! The digit is not in the code</string>
    <string name="game4_digit4_almost">Digit 4. Almost! The digit is in the code but in another place. It might be a place already guessed!</string>
    <string name="game4_digit4_ok">Digit 4. OK! The digit is in the right place</string>
    <string name="game4_warn_plus">Error! You can\'t put a higher digit than 9.</string>
    <string name="game4_warn_minus">Error! You can\'t put a lower digit than 0.</string>
    <string name="game4_code_missing">Please insert a full code!</string>
    <string-array name="game3_es_questions">
        <item>We have two cakes.</item>
        <item>Where is my bathing suit?</item>
        <item>Can you drive me to the airport?</item>
        <item>Hotel rooms are too noisy.</item>
        <item>I cannot find another candle.</item>
        <item>She walks every night after dinner.</item>
        <item>When is Valentine\'s Day?</item>
        <item>Did you blow out the candles?</item>
        <item>We accept your invitation.</item>
        <item>This theater is twenty years old.</item>
        <item>He is planning a celebration.</item>
        <item>The children have plastic whistles.</item>
        <item>I meet them here every day."</item>
        <item>This blanket is red.</item>
        <item>Those waitresses are slow.</item>
        <item>The airplane has many seats.</item>
        <item>There are twenty gates in this airport.</item>
        <item>I want to learn how to drive a car.</item>
        <item>Are we still friends?</item>
        <item>I am going out tonight.</item>
    </string-array>
    <string-array name="game3_es_answer1">
        <item>No tienen más boletos.</item>
        <item>¿Cuántos hoteles hay cerca del aeropuerto?</item>
        <item>No nadamos muy bien.</item>
        <item>Son turistas en este país.</item>
        <item>El tren está atrasado otra vez.</item>
        <item>Ella camina cada noche después de la cena.</item>
        <item>Quiero aprender a conducír un coche.</item>
        <item>¿Es él su novio?</item>
        <item>Aceptamos su invitación.</item>
        <item>Tenemos un árbol de Navidad pequeño.</item>
        <item>Los océanos son muy grandes.</item>
        <item>Es una onda grande.</item>
        <item>Los pájaros se sientan en las boyas.</item>
        <item>Esta manta es roja.</item>
        <item>Mi hija lee todo el dia.</item>
        <item>¿Qué deportes la gustan a usted?</item>
        <item>El salvavidas se sienta en su silla.</item>
        <item>Quiero aprender a conducir un coche.</item>
        <item>No puedo jugar al piano.</item>
        <item>Salgo esta noche.</item>
    </string-array>
    <string-array name="game3_es_answer2">
        <item>Vivo al lado del océano.</item>
        <item>¿Dónde está mi bañador?</item>
        <item>Él está planeando una celebración.</item>
        <item>Ella no es mi novia.</item>
        <item>No puedo encontrar otra vela.</item>
        <item>Este avión tiene cuatro tripulantes de vuelo.</item>
        <item>Salen cada noche.</item>
        <item>Los aviones vuelan sobre nuestra casa.</item>
        <item>Los pájaros se sientan en las boyas.</item>
        <item>Este teatro tiene veinte años.</item>
        <item>¿Dónde está la estación de seguridad?</item>
        <item>Los niños tienen silbato de plástico.</item>
        <item>¿Dónde están mis palas?</item>
        <item>¿Dónde está mi bañador?</item>
        <item>¿Cuántos hoteles hay cerca del aeropuerto?</item>
        <item>El avión tiene muchos asientos.</item>
        <item>A mi abuelo le gusta pescar.</item>
        <item>Él goza de todas las celebraciones.</item>
        <item>Los muchachos hatinan después de la escuela.</item>
        <item>Les gusta tener fiestas.</item>
    </string-array>
    <string name="acc_logo" translatable="false">Logo</string>
</resources>