<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@mipmap/logo"
        android:contentDescription="@string/acc_logo"
        android:padding="16dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="36sp"
        android:textColor="@android:color/white"
        android:text="@string/play"
        android:textStyle="bold"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/info_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="36sp"
        android:textColor="@android:color/white"
        android:text="@string/info"
        android:textStyle="bold"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:background="#EEEEEE"
        android:text="@string/site"
        android:contentDescription="@string/site_acc"
        android:textSize="24sp"
        android:textStyle="italic"
        android:gravity="center" />

</LinearLayout>