<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/game4_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/game4_basic"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/game4_play_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:text="@string/play"
        android:textStyle="bold"
        android:background="@color/game4Primary" />

    <Button
        android:id="@+id/game4_how_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:text="@string/how_to"
        android:textStyle="bold"
        android:background="@color/game4Light" />

</LinearLayout>