<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/game3_final_score"
        android:text="@string/game3_basic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <RelativeLayout
        android:id="@+id/game3_play_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/game3Primary">

        <ImageView
            android:id="@+id/game3_es_flag"
            android:src="@drawable/es"
            android:contentDescription="@string/game3_es"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <TextView
            android:importantForAccessibility="no"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:text="@string/play"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:gravity="center" />

        <ImageView
            android:id="@+id/game3_it_flag"
            android:src="@drawable/it"
            android:contentDescription="@string/game3_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:importantForAccessibility="no"
                android:id="@+id/game3_es_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:importantForAccessibility="no"
                android:id="@+id/game3_it_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        </RelativeLayout>

    <Button
        android:id="@+id/game3_how_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:text="@string/how_to"
        android:textStyle="bold"
        android:background="@color/game3Light" />

</LinearLayout>