<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/game2_play"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="16dp"
        android:text="@string/game2_basic"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/game2_loss"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/game2_final_score"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/game2_play_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:text="@string/play"
        android:textStyle="bold"
        android:background="@color/game2Primary" />

    <Button
        android:id="@+id/game2_how_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:text="@string/how_to"
        android:textStyle="bold"
        android:background="@color/game2Light" />

</LinearLayout>